--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,9 +8,9 @@ code {
 @import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
 
 :root{
-  --color-base: #23232f;
-  --color-highlight: #2a8db3;
-  --color-alt: #59d199;
+  --color-base: #2c232f;
+  --color-highlight: #efaf65;
+  --color-alt: #59d1c3;
   --color-text: hsl(0, 0%, 100%);
   --width-cont: 1800px;
 }
@@ -31,7 +31,7 @@ html {
 body {
     /* min-height: 100vh; */
     background-color: var(--color-base);
-    background-image: url("../public/tile/dark_geometric.png");
+    background-image: url("../public/tile/connectwork.webp");
     background-repeat: repeat;
 
     margin: 0;
@@ -109,6 +109,7 @@ a:hover{
 input[type="text"],
 input[type="password"],
 button,
+.process__upload-btn,
 textarea {
   /* font-family: 'Nunito', sans-serif; */
   font-size: 22px;
@@ -126,13 +127,15 @@ button {
   margin-top: 1rem;
 }
 
-button {
+button,
+.process__upload-btn {
   padding: 0.5rem;
   margin-bottom: 1rem;
   cursor: pointer;
   border-bottom: solid var(--color-highlight) 3px;
 }
-button:hover{
+button:hover,
+.process__upload-btn:hover{
   background-color: var(--color-highlight);
   color: white;
   border-bottom: solid black 3px;
@@ -306,6 +309,61 @@ ul{
 }
 
 .homies{
-  color: #2a8db366;
+  color: #b32aa866;
   font-size: 80px;
+}
+
+/* fileupload style */
+/* fileupload style */
+/* fileupload style */
+.main-container {
+  padding: 3rem;
+  background-color: rgb(55, 44, 58);
+}
+
+.main-heading {
+  text-transform: uppercase;
+  text-align: center;
+  color: white;
+}
+
+.image-container {
+  border-radius: 1rem;
+  padding: 1.5rem;
+}
+
+.process {
+  background-color: rgb(128, 128, 128);
+  border-radius: 1rem;
+  padding: 1.5rem;
+  margin-bottom: 2rem;
+}
+
+.process__heading {
+  text-transform: uppercase;
+  text-align: center;
+  color: black;
+}
+
+.process__details {
+  text-align: center;
+}
+
+.process__upload-btn {
+  display: block;
+  margin: 2.5rem auto;
+  text-align: center;
+}
+
+.process__image {
+  display: block;
+  margin: 0 auto;
+  width: 250px;
+  height: 250px;
+}
+
+.main-credit {
+  text-align: center;
+  color: white;
+  font-weight: bold;
 }
