--- a/client/src/index.css
+++ b/client/src/index.css
@@ -231,7 +231,7 @@ form.popUpk svg{
 ul{
   padding-bottom: 1rem;
   margin-bottom: 1rem;
-  border-bottom: black dotted 1px;
+  /* border-bottom: black dotted 1px; */
 }
 
 .createPost{
@@ -368,5 +368,35 @@ ul{
 .main-credit {
   text-align: center;
   color: white;
+  font-weight: bold;
+}
+
+/* slide style */
+.slide-0{
+  border-radius: 20px;
+  padding: 1rem;
+}
+.slide-0 .meta-data{
+  font-size: 10px;
+  color: rgba(255, 255, 255, 0.514);
+  margin: 0;
+  padding: 0;
+}
+
+/* DROP ZONE */
+.dropzone {
+  text-align: center;
+  padding: 30px;
+  border: 3px dashed #eeeeee;
+  background-color: #fafafa;
+  color: #bdbdbd;
+  cursor: pointer;
+  margin-bottom: 20px;
+}
+.selected-file-wrapper {
+  text-align: center;
+}
+.selected-file {
+  color: #000; 
   font-weight: bold;
 }
