dynamic Player link for any collection

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -253,6 +253,10 @@ ul{
   /* border-bottom: black dotted 1px; */
 }
 
+.formErr{
+  color: red;
+}
+
 .createPost{
   background-color: white;
   border: solid var(--color-highlight) 3px;
