--- a/client/src/index.css
+++ b/client/src/index.css
@@ -516,6 +516,10 @@ ul{
 
 /* * CollectionEditor */
 .collectionEditor .deleteBtn{
-  margin: 0 0 .2rem 0;
+  margin: 0 .4rem .2rem 0;
   padding: 0 .2rem;
+}
+.chbx{
+  transform: scale(2);
+  margin: 0 .5rem;
 }
