--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,4 +1,6 @@
 @import './styles/sass/toggle.scss';
+// @import "slick-carousel/slick/slick.css";
+// @import "slick-carousel/slick/slick-theme.css";
 // @import './styles/sass/colllection-page.scss';
 
 
